# uniffi-bindgen-kotlin

./: Cargo.toml  askama.toml
src/: lib.rs  main.rs
src/gen_kotlin/: custom.rs  external.rs  mod.rs
tests/: fixtures.rs
